# ironhub

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tracking.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: new-skill.yml  new-tool.yml  usecase.yml
.github/workflows/: ci.yml  release.yml
alpha-hunter/: SKILL.md
chart-reader/: SKILL.md
crypto-tracker/: SKILL.md
crypto-trade-journal/: SKILL.md
dca-strategist/: SKILL.md
decision-maker/: SKILL.md
defi-navigator/: SKILL.md
fact-checker/: SKILL.md
indicator-analyst/: SKILL.md
market-sentiment/: SKILL.md
news-fetcher/: SKILL.md
news-trader/: SKILL.md
on-chain-reader/: SKILL.md
order-builder/: SKILL.md
perps-risk-manager/: SKILL.md
perps-setup/: SKILL.md
planner/: SKILL.md
portfolio-analyzer/: SKILL.md
risk-manager/: SKILL.md
scripts/: generate-manifest.sh  lint-capability-references.sh  smoke-test-skill.sh  validate-use-cases.mjs
self-critique/: SKILL.md
skills/alpha-hunter/: SKILL.md
skills/api-caller/: SKILL.md
skills/arbitrage-spotter/: SKILL.md
skills/bitcoin-reddit-sentiment/: SKILL.md
skills/blog-transaction-log-data-quality/: .smoke-fixtures.json  SKILL.md
skills/brand_reputation_monitor/: SKILL.md
skills/btc-anomaly-detector/: SKILL.md
skills/btc-dominance-alert/: SKILL.md
skills/bug-finder/: SKILL.md
skills/chart-reader/: SKILL.md
skills/chief-of-staff/: SKILL.md
skills/code-reviewer/: SKILL.md
skills/commitment-capture/: .smoke-fixtures.json  SKILL.md
skills/commitment-digest/: .smoke-fixtures.json  SKILL.md
skills/community-engagement-monitoring-and-matchmaking/: .smoke-fixtures.json  SKILL.md
skills/competitor-page-watcher/: SKILL.md
skills/cross-exchange-spread/: SKILL.md
skills/crypto-hypothesis-tester/: SKILL.md
skills/crypto-macro-confluence-monitor/: SKILL.md
skills/crypto-tracker/: SKILL.md
skills/crypto-wallet-verification/: .smoke-fixtures.json  SKILL.md
skills/crypto_trend_sentiment/: SKILL.md
skills/daily-crypto-briefing/: SKILL.md
skills/dca-strategist/: SKILL.md
skills/decision-journal/: SKILL.md
skills/decision-maker/: SKILL.md
skills/defi-navigator/: SKILL.md
skills/defi-portfolio-monitor/: SKILL.md
skills/defi-trader/: SKILL.md
skills/direct-report-1-1-prep/: .smoke-fixtures.json  SKILL.md
skills/email-writer/: SKILL.md
skills/event-tracker/: SKILL.md
skills/executive-coaching-agenda/: .smoke-fixtures.json  SKILL.md
skills/expense-receipt-compliance/: .smoke-fixtures.json  SKILL.md
skills/fact-checker/: SKILL.md
skills/free-trial-guardian/: SKILL.md
skills/funding-rate-watcher/: SKILL.md
skills/habit-streak-keeper/: SKILL.md
skills/image-handler/: SKILL.md
skills/indicator-analyst/: SKILL.md
skills/kyc-renewal-tracking/: .smoke-fixtures.json  SKILL.md
skills/legal-readiness-check-and-contract-kickoff-packet/: .smoke-fixtures.json  SKILL.md
skills/liquidation-hunter/: SKILL.md
skills/local_business_lead_generator/: SKILL.md
skills/market-sentiment/: SKILL.md
skills/memecoin-entry/: SKILL.md
skills/memecoin-exit/: SKILL.md
skills/memecoin-scanner/: SKILL.md
skills/microsoft-365-workflow/: SKILL.md
skills/news-fetcher/: SKILL.md
skills/news-trader/: SKILL.md
skills/obsidian-accountability/: .smoke-fixtures.json  SKILL.md
skills/obsidian-idea-capture/: .smoke-fixtures.json  SKILL.md
skills/obsidian-task-ledger/: .smoke-fixtures.json  SKILL.md
skills/odds-analyzer/: SKILL.md
skills/on-chain-reader/: SKILL.md
skills/order-builder/: SKILL.md
skills/otc-demand-triage/: .smoke-fixtures.json  SKILL.md
skills/partner-milestone-detection-and-marketing-alert/: .smoke-fixtures.json  SKILL.md
skills/perps-risk-manager/: SKILL.md
skills/perps-setup/: SKILL.md
skills/planner/: SKILL.md
skills/polymarket-trader/: SKILL.md
skills/portfolio-analyzer/: SKILL.md
skills/position-manager/: SKILL.md
skills/pre-meeting-relationship-brief/: SKILL.md
skills/presentation-generation/: SKILL.md
summarizer/: SKILL.md
tools/attio/: Cargo.toml  README.md  attio-tool.capabilities.json  manifest.toml
tools/attio/prompts/attio/: invoke.md
tools/attio/schemas/attio/: invoke.input.v1.json  raw_output.v1.json
tools/attio/src/: api.rs  attio.rs  lib.rs  types.rs
tools/defillama/: Cargo.toml  README.md  defillama-api.yaml  defillama-tool.capabilities.json
tools/defillama/src/: lib.rs
tools/microsoft-365/: Cargo.toml  README.md  manifest.toml
tools/microsoft-365/prompts/microsoft-365/: invoke.md
tools/microsoft-365/schemas/microsoft-365/: invoke.input.v1.json  raw_output.v1.json
tools/near-rpc/: Cargo.toml  README.md  manifest.toml  near-rpc-tool.capabilities.json
tools/near-rpc/prompts/near-rpc/: invoke.md
tools/near-rpc/schemas/near-rpc/: invoke.input.v1.json  raw_output.v1.json
tools/near-rpc/src/: api.rs  lib.rs  rpc.rs  types.rs
tools/nova-submit/: Cargo.toml  README.md  manifest.toml  nova-submit-tool.capabilities.json
tools/nova-submit/src/: lib.rs
tools/polymarket/: Cargo.toml  README.md  manifest.toml  polymarket-tool.capabilities.json
tools/polymarket/prompts/polymarket/: invoke.md
tools/polymarket/schemas/polymarket/: invoke.input.v1.json  raw_output.v1.json
tools/polymarket/src/: api.rs  http.rs  lib.rs  types.rs
tools/wordpress/: Cargo.toml  README.md  configure.py  wordpress-tool.capabilities.json
tools/wordpress/src/: lib.rs
tools/xero/: Cargo.toml  README.md  manifest.toml  xero-tool.capabilities.json
tools/xero/prompts/xero/: invoke.md
tools/xero/schemas/xero/: invoke.input.v1.json  raw_output.v1.json
tools/xero/src/: api.rs  lib.rs  types.rs  xero.rs
trade-memory/: SKILL.md
trade-planner/: SKILL.md
translator/: SKILL.md
trend-detector/: SKILL.md
web/: .env.example  .gitignore  README.md  components.json  eslint.config.mjs  package.json  pnpm-lock.yaml
web-search/: SKILL.md
(+394 files in other folders)
