[package]
name = "microsoft-365-tool"
version = "0.1.0"
edition = "2021"
description = "Microsoft 365 integration for the IronClaw agent runtime. Wraps Microsoft Graph v1.0 across Outlook, Teams, Excel, OneDrive, SharePoint, Calendar, and Word and PowerPoint document generation."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nearai/ironhub"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
base64 = "0.22"
docx-rs = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
