[package]
name = "wordpress-tool"
version = "0.1.2"
edition = "2021"
description = "WordPress + WooCommerce REST tool for IronClaw (WASM component)"
license = "MIT OR Apache-2.0"
authors = ["cuongdcdev <cuongdcdev@gmail.com>"]
repository = "https://github.com/cuongdcdev/ironclaw-skills-tools"
publish = false

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.41.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
